2025-03-03 (a399b92): update gizHub runner macos version
2025-03-03 (3190b80): fix #419 - allow MATH scaling 20 mV .. 1000 V
2025-03-02 (799cd67): replace deprecated upload-artifact@v3 with upload-artifact@v4
2025-03-02 (68221da): fix #420 - remenber save as path for screenshots etc.
2024-03-24 (ffd1691): README: add hint for possible graphics issue solution for win systems
2024-03-24 (d0f44f8): Fix voltageScale to correct indices for ISDS205b
2024-03-24 (09d0e28): Merge branch 'isds205b/channelCalFix' of https://github.com/wakass/OpenHantek6022 into wakass-isds205b/channelCalFix
2024-03-24 (a207f5f): Fix voltageScale to correct indices
2024-03-15 (b9d6560): README update, add solution Crostini graphics issue; build info update
2024-03-12 (29dbcca): README update
2024-03-05 (9c1e9e8): fix #399 - update macos build instructions, hack nedded no more
2024-02-24 (3ac5c3a): fw refactoring - no functional change
2024-02-23 (ad43d3b): Merge branch 'wakass-main' - Instrustar 205X support #394
2024-02-23 (5531981): small fw update - functional change
2024-02-19 (b8fb40b): Instrustar 205X support (PR #394)
2024-02-05 (0e2c641): Updated calibration values after measurement.
2024-02-04 (211e9c8): doc update, add windows driver license info
2024-01-08 (1b56a17): use static fftw, usb and z libs
2024-01-01 (e6d863d): next build system update
2024-01-01 (7f9eb94): build system update
2023-12-31 (3b12af2): prepare next release 3.4
2023-12-31 (98959ab): prepare next release 3.4
2023-12-31 (f986d63): prepare next release 3.4
2023-12-29 (73de8e3): replace outdated CHANGELOG; small reformatting of MDSO model
2023-12-28 (b5e1aee): fix #390
2023-12-23 (1c3a681): tool update
2023-12-23 (c786a8f): minor packaging update
2023-12-19 (c4c79ee): README typo fix; fix binary names
2023-12-18 (e4767dc): doc update; tool update; clean up
2023-12-18 (d00e32d): update build system, same setup for debian, macos, mingw, msvc
2023-12-17 (49e0efe): remove dirty tag from MSVC